syntax = "proto3";

package core;
option go_package = "github.com/andantan/p2p-pbft-modular-blockchain-network/proto/block/header";

message Header {
  uint32 version = 1;
  bytes merkle_root = 2;
  bytes prev_block_hash = 3;
  int64 timestamp = 4;
  uint64 height = 5;
  uint64 weight = 6;
  bytes state_root = 7;
  uint64 nonce = 8;
}