syntax = "proto3";

package block;
option go_package = "github.com/andantan/p2p-pbft-modular-blockchain-network/proto/core/block";

message CommitVote {
  bytes digest = 1;
  bytes public_key = 2;
  bytes signature = 3;
}

message Tail {
  repeated CommitVote commit_votes = 1;
}